<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" >防身相机</string>
    <string name="app_name_hide" >皮肤设置</string>
    <string name="app_des">一款不可错过的私人拍摄神器。\n(小哥哥，小姐姐出门必备，浪漫约会羞答答纪念，工作会议的记录神器，路见不平的取证神器，还可以充当行车记录仪哦，支持各种拍摄姿势，你懂的…)\n如需咨询，请微信：GZ_Dillon</string>
    <string name="enable_do_not_disturb">允许开启免打扰</string>
    <string name="enable_draw_overlays">允许开启悬浮窗</string>
    <string name="disable_app_notifications">关闭应用通知</string>
    <string name="activate_silent_shooting">启用无声拍摄</string>
    <string name="op_tip">Make sure the following options are checked:</string>
    <string name="ac_open">智能拍摄开启成功！</string>
    <string name="ac_close">Smart Photo is off!</string>
    <string name="user_tip">为了应用程序正常工作，请按照提示打开权限。当获得所有权限后，打开程序将自动进入主页。</string>
    <string name="done">处理成功</string>
    <string name="failed">处理失败</string>
    <string name="cancel">取消</string>
    <string name="photo">照片</string>
    <string name="video">录像</string>
    <string name="audio">录音</string>
    <string name="take_photo">拍照</string>
    <string name="video_record">录像</string>
    <string name="audio_record">录音</string>
    <string name="add_password">设置应用开启密码</string>
    <string name="password_et_tip">密码：</string>
    <string name="enter">进入</string>
    <string name="forget_pass_tip">忘记密码？</string>
    <string name="dialog_common_title">提示</string>
    <string name="incorrect_pass">密码错误</string>
    <string name="contact_email_tip">卸载应用程序将清除数据，但已存储在外部的数据不会受到影响。\n如需帮助，请加QQ:1304937 微信：GZ_Dillon</string>
    <string name="setting">- 设置 -</string>
    <string name="had_ban_title">提示</string>
    <string name="had_ban_msg">账户已禁用，请联系管理员。\nQQ:1304937 微信：GZ_Dillon</string>
    <string name="had_ban_old">旧版本已无法使用，请前往下载最新版本！</string>
    <string name="deny_forever_tip">未获得所需权限，请到应用设置页面获取！</string>
    <string name="go">前往</string>
    <string name="update">更新</string>
    <string name="delete">删除</string>
    <string name="external_failed">导出失败！</string>
    <string name="external_success">导出成功！</string>
    <string name="video_min_dur_tip">不能低于5秒钟</string>
    <string name="audio_min_dur_tip">不能低于5秒钟</string>
    <string name="use_front">使用前摄像头</string>
    <string name="use_back">使用后摄像头</string>
    <string name="capture_video">录像</string>
    <string name="capture_photo">拍照</string>
    <string name="capture_audio">录音</string>
    <string name="capture_screen_on">屏幕开启时启动捕获</string>
    <string name="capture_screen_off">屏幕关闭时启动捕获</string>
    <string name="capture_home_key">点击主屏按钮（Home）时捕获</string>
    <string name="capture_recent_key">点击最近应用程序按钮（RecentApps）时启动捕获</string>
    <string name="capture_volume_key">降低音量启动捕获，增加音量停止捕获。(需要解锁屏幕)</string>
    <string name="clean_tips">清理这些数据</string>
    <string name="clean">清理</string>
    <string name="path">路径：</string>
    <string name="normal">普通版</string>
    <string name="video_count">录像：</string>
    <string name="photo_count">照片：</string>
    <string name="audio_count">录音：</string>
    <string name="size">占用：</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="empty">— 空空如也 —</string>
    <string name="media">捕获类型：</string>
    <string name="max"> </string>
    <string name="camera">摄像头：</string>
    <string name="facing_front">前摄像头</string>
    <string name="facing_back">后摄像头</string>
    <string name="status">状态：</string>
    <string name="screen_on">亮屏时</string>
    <string name="screen_off">关屏时</string>
    <string name="home_key">主屏键</string>
    <string name="recent_key">最近键</string>
    <string name="pass">密码</string>
    <string name="over_30s">设置超过30秒，请先升级为VIP！</string>
    <string name="over_60s">设置超过60秒，请先升级为VIP！</string>
    <string name="google_url">https://play.google.com/store/apps/details?id=com.dillon.supercampro</string>
    <string name="for_more_features_tip">-- 无广告，更多功能，请点击开通VIP --</string>
    <string name="no_more_data">没有更多数据！</string>
    <string name="loading_more">加载更多…</string>
    <string name="Exp">Exp</string>
    <string name="secret">隐私：</string>
    <string name="activate">启动捕获：</string>
    <string name="check">查看</string>
    <string name="how_to_use">看看如何使用它？</string>
    <string name="welcome">欢迎</string>
    <string name="volume_key">音量键</string>
    <string name="please_connect">当前网络不可用！</string>
    <string name="back">返回</string>
    <string name="look_ads">看广告</string>
    <string name="ads_show">增加次数</string>
    <string name="double_click">连续点击两次，将回到屏幕主页</string>
    <string name="add_can_photo">+ 拍照次数</string>
    <string name="add_can_video">+ 录像次数</string>
    <string name="add_can_audio">+ 录音次数</string>
    <string name="audio_limit">拍照次数：</string>
    <string name="video_limit">录像次数：</string>
    <string name="photo_limit">录音次数：</string>
    <string name="remain">剩余</string>
    <string name="see_ads_limit">每分钟只能点3次！</string>
    <string name="faq">帮助</string>
    <string name="faq_title">常见问题</string>
    <string name="pay_vip">VIP</string>
    <string name="remind">震动提示：</string>
    <string name="remind_none">不提示</string>
    <string name="remind_start">开始时</string>
    <string name="remind_stop">停止时</string>
    <string name="remind_both">都提示</string>
    <string name="remind_when_none">不需要震动提示</string>
    <string name="remind_when_start">捕获开始时震动</string>
    <string name="remind_when_stop">捕获结束时震动</string>
    <string name="remind_when_both">捕获开始或结束时都震动</string>
    <string name="pixel">分辨率：</string>
    <string name="size_best">最佳</string>
    <string name="size_2k">2K</string>
    <string name="size_1080p">1080P</string>
    <string name="size_4k">4K</string>
    <string name="please_pro">请升级为VIP！</string>
    <string name="support_headset">（支持耳机）</string>
    <string name="update_tip_title">新版本提示</string>
    <string name="update_tip_msg">是否前往下载新版本?</string>
    <string name="theme_title">主题</string>
    <string name="home_bg">首页</string>
    <string name="setting_bg">设置页面</string>
    <string name="faq_bg">帮助页面</string>
    <string name="pass_bg">密码页面</string>
    <string name="theme_bg">主题页面</string>
    <string name="chat_bg">聊天页面</string>
    <string name="camouflage_app">隐匿应用图标及其名称</string>
    <string name="explain_silent_shooting">为了进行无声捕获，你需要启用免打扰权限。启用后，将打开提醒功能和空闲管理功能。</string>
    <string name="explain_close_notification">关闭通知：\nAPP图标将不会出现在手机顶部的状态栏，也不会出现在锁屏页面。</string>
    <string name="explain_camouflage_app">启用隐藏：\nAPP的图标和名字将会进行隐藏。如何打开？长按桌面图标列表末尾的空白区域，将会出现几个隐藏的快捷方式，选择“显示”。（启用隐藏功能时，页面短暂重开，是正常现象）</string>
    <string name="explain_add_pass">应用密码：\n密码最长为6位，设置密码后，每次重新打开APP，都需要输入密码。</string>
    <string name="explain_media_photo">后台拍照</string>
    <string name="explain_media_video">后台录像：\nVIP录像时长无限制，非VIP最高设置30秒。</string>
    <string name="explain_media_audio">后台录音：\nVIP录音时长无限制，非VIP最高设置60秒。</string>
    <string name="explain_remind_both">当在后台进行捕获时，启动和停止都会有震动提示（拍照只有一次震动）。\n如选择后台录像，则当录像开始时，就会震动一次来提示录像开始了。而当录像结束了，也会震动一次提示录像结束了。</string>
    <string name="explain_remind_none">当在后台进行捕获时，启动和停止都不会震动提示。</string>
    <string name="explain_remind_start">当在后台进行捕获时，启动捕获会震动一次，而停止捕获不会有。</string>
    <string name="explain_remind_stop">当在后台进行捕获时，停止捕获会震动一次，而启动捕获不会有。</string>
    <string name="explain_screen_on">亮屏启动：\n屏幕亮起的时候启动捕获，如你按手机电源键打开屏幕，那这个时候就开始拍照、录像或录音了</string>
    <string name="explain_screen_off">关屏启动：\n屏幕关闭的时候启动捕获，如你按手机电源键关闭屏幕，那这个时候就开始拍照、录像或录音了</string>
    <string name="explain_home_key">主屏键启动：\n主屏键指的是手机底部导航栏中间的那个按钮。目前的手机一般为虚拟导航栏，而中间的按键（主屏键）也是返回到手机主页。点击这个按键就启动捕获。</string>
    <string name="explain_recent_key">最近键启动：\n指的是手机底部导航栏最左或最右的那个按钮。注意：部分手机的主屏键就是最近键，所以选择主屏键启动无效，需要选择最近键。请参考主屏键说明！</string>
    <string name="explain_volume_key">音量键启动： \n调节音量的方式有多种，如按手机边缘的音量键，耳机，甚至语音调控。\n打个例子，选择录视频，则调低音量，就会立刻开始录像。调高音量，则会立刻停止录像。如果当前正在录像，再次点击调低音量不会开始新的录像。需要停止上一次录像，才会开始。\n(少数手机，需要亮屏解锁状态才生效)</string>
    <string name="pay_code">微信支付</string>
    <string name="pay_faq">支付问题，请微信：GZ_Dillon</string>
    <string name="vip_month">一个月：38元</string>
    <string name="vip_forever">永久：68元</string>
    <string name="pay_tip">付款：请备注主页左上角ID，永久VIP可额外备注想要的6位ID（数字或字母）\n开通成功，请重新打开APP！</string>
    <string name="pay_tip1">重要：付款请备注"VIP-</string>
    <string name="pay_tip2">"。成功后请重新打开主页！</string>
    <string name="pay_tip1_vip">重要：付款请备注ID-"</string>
    <string name="pay_tip2_vip">"。成功后请重新打开主页！</string>
    <string name="long_click_save_image">长按图片，保存到本地</string>
    <string name="net_unable">当前网络不可用！</string>
    <string name="take_photo_continue">连拍</string>
    <string name="num">张</string>
    <string name="second_interval">秒/张，拍</string>
    <string name="second">秒</string>
    <string name="welcome_to">欢迎使用</string>
    <string name="your_id">ID：</string>
    <string name="your_exp">经验：</string>
    <string name="explain_photo_continue">自动连拍：VIP或经验100+ \n第一个是拍照的间隔(最大300秒)，第二个是需要拍照的总数（最多99张）。\n停止连拍：\n调高音量即可停止，或者APP主页面点击右下角的状态按钮。连拍过程中，如果再次选择了去录像或录音，则连拍自动中断。</string>
    <string name="min_photo_interval">间隔不能少于3秒</string>
    <string name="over_photo_interval">自动连拍间隔不能超过100秒</string>
    <string name="min_photo_count">连拍不能少于两张</string>
    <string name="over_photo_count">连拍不能多于99张</string>
    <string name="delete_tip">删除提醒</string>
    <string name="only_un_tap">保留喜欢</string>
    <string name="current_photo_p1">当前照片：</string>
    <string name="current_photo_p2">\n如需保留标志喜欢的，请勾复选框！不勾选，则默认删除所有数据。数据删除后无法恢复，请确认是否删除。</string>
    <string name="current_video_p1">当前视频：</string>
    <string name="current_video_p2">\n如需保留标志喜欢的，请勾复选框！不勾选，则默认删除所有数据。数据删除后无法恢复，请确认是否删除。</string>
    <string name="current_audio_p1">当前音频：</string>
    <string name="current_audio_p2">\n如需保留标志喜欢的，请勾复选框！不勾选，则默认删除所有数据。数据删除后无法恢复，请确认是否删除。</string>
    <string name="unnecessary_delete">数据为空，无需删除！</string>
    <string name="setting_title_theme">主题</string>
    <string name="setting_title_vip">会员</string>
    <string name="reward">打赏</string>
    <string name="show_vip_tip">恭喜，你目前已经是VIP，享受去广告特权，并解锁所有功能。\n如果APP对你帮助很大，可以继续打赏并订制你需要的功能，感谢支持！</string>
    <string name="vip_google_play_tip">VIP版本已上架GooglePlay，无广告并解锁所有功能，是否前往下载？</string>
    <string name="vip_style">VIP无广告，解锁所有功能！（送6位个性唯一ID）</string>
    <string name="please_pro_exp500">经验100以上或开通VIP解锁！</string>
    <string name="pay">支付</string>
    <string name="theme_change_tip">背景图片：支持动态图、单击选择、长按删除</string>
    <string name="q1">一：如何使用？</string>
    <string name="a1">《防身相机》是一个无声，无预览的隐秘拍摄应用。\n多种启动拍摄的方式，默认是主屏键（即点击主屏键即可进行隐秘拍摄）\n拍摄或记录的数据，可在应用主页查看。拍摄参数，可在设置页自行调整，点击参数名称有对应的解释。\n非常感谢你的使用！</string>
    <string name="q2">二：如何升级成为VIP？</string>
    <string name="a2">点击去开通VIP（开通成功后请重新打开APP）</string>
    <string name="q3">三：如何获取经验值？</string>
    <string name="a3">拍照得1经验，录视频得2经验，录音得1经验。经验值可用于解锁功能，兑换个性ID或VIP。（卸载后将清空经验！）</string>
    <string name="q4">四：推荐使用方式？</string>
    <string name="a4">推荐使用快捷方式或音量键控制，方便快捷，适合各种姿势的操作。</string>
    <string name="q5">五：为什么启动或关闭录像有声音？</string>
    <string name="a5">国内的手机大多属于高度订制机，部分手机会出现不兼容的问题，如少数的小米手机，需要手动操作关闭声音。</string>
    <string name="q6">六：如何暂停智能捕获？</string>
    <string name="a6">点击主页面右上角开关。开：APP将根据设置页面的参数进行捕获。关：APP将不再进行智能捕获。小部件手动捕获不受影响。</string>
    <string name="q7">七：如何一键清除数据？</string>
    <string name="a7">在APP主页，长按分类标签，如长按“照片”，关于标签：单击，切换类别列表；双击，回到列表顶部；长按，弹出该类别列表数据清除窗口。</string>
    <string name="q8">八：伪装应用后无法安装更新？</string>
    <string name="a8">请在设置页面解除伪装，重新安装即可。</string>
    <string name="q9">九：应用下载及更新网站?</string>
    <string name="a9">https://www.pgyer.com/supercamera</string>
    <string name="q10">十：程序运行后台运行一段时间就关闭了？</string>
    <string name="a10">这个主要是定制系统的电池管理导致，国内手机如华为，可在电源管理找到本应用，将自动管理设为手动管理，并开启自动运行，后台运行等权限。</string>
    <string name="q11">十一：其他问题（如，订制功能…）？</string>
    <string name="a11">请添加QQ：1304937或微信：GZ_Dillon咨询。</string>
    <string name="time_start">定时捕获：</string>
    <string name="permit_deny">程序无法正常工作，请开启必要权限！</string>
    <string name="permission_not_obtained">权限获取</string>
    <string name="act_vip">激活VIP</string>
    <string name="act_tip">微信获取：GZ_Dillon\n每个码仅可用一次，已激活VIP则增加时长！</string>
    <string name="param_bg">参数页面</string>
</resources>