<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/dp_10"
    android:paddingTop="@dimen/dp_15"
    android:paddingEnd="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_10">


    <TextView
        android:id="@+id/tv_icon_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="激活码："
        android:textColor="@color/black70"
        android:textSize="@dimen/text_normal_15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/et_actcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_actcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="请输入或粘贴激活码"
        android:maxLines="1"
        android:layout_marginEnd="@dimen/dp_10"
        android:textColor="@color/black70"
        android:textSize="@dimen/text_normal_15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_icon_str"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_act_explain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:textIsSelectable="true"
        android:gravity="center"
        android:padding="@dimen/dp_2"
        android:text="@string/act_tip"
        android:textColor="@color/red_normal"
        android:textSize="@dimen/text_small_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_actcode" />

    <TextView
        android:id="@+id/tv_act_vip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/act_vip"
        android:textColor="@color/dialogButtonColor"
        android:textSize="@dimen/text_small_13sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_act_cancel"
        app:layout_constraintEnd_toStartOf="@id/tv_act_cancel" />



    <TextView
        android:id="@+id/tv_act_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_10"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/cancel"
        android:textColor="@color/dialogButtonColor"
        android:textSize="@dimen/text_small_13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_act_explain" />

</androidx.constraintlayout.widget.ConstraintLayout>