<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.dillon.supercam.utils.view.photoview.PhotoView
        android:id="@+id/act_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <com.dillon.supercam.utils.view.shimmer.ShimmerTextView
            android:id="@+id/tv_show_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="2"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/black90"
            android:textSize="@dimen/text_big_40sp"
            android:textStyle="bold"
            app:reflectionColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:gravity="center"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:text="@string/password_et_tip"
                android:textColor="@color/black90"
                android:textSize="@dimen/text_normal_15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_40"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_8">


                <EditText
                    android:id="@+id/et_pass"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:padding="@dimen/dp_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_0_1"
                    android:background="@color/gray" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/tv_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_60"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_60"
            android:background="@drawable/shape_start_bg"
            android:gravity="center"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:text="@string/enter"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:text="@string/forget_pass_tip"
            android:textColor="@color/black70"
            android:textSize="@dimen/text_normal_15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="1" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />
</FrameLayout>